--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-props-no-spreading": "off",
+        "import/no-extraneous-dependencies": "off",
         "comma-dangle": "off",
         "react/jsx-indent": "off"
     }
